--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="filters" id="category-filters">
                 <button class="filter-btn active" data-cat="all">All Pieces</button>
                 <button class="filter-btn" data-cat="keychains">Keychains</button>
-                <button class="filter-btn" data-cat="hair accessories">Scrunchies</button>
+                <button class="filter-btn" data-cat="hair accessories">Hair Accessories</button>
                 <button class="filter-btn" data-cat="bagcharms">Bag Charms</button>
                 <button class="filter-btn" data-cat="others">Others</button>
             </div>
