--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <ul>
                         <li>7696054649</li>
                         <li>akritigoyal9504@gmail.com</li>
-                        <li><a href="https://www.instagram.com/ayrise._?igsh=MWdlcnNnbGNiOGVzNQ==" target="_blank" rel="noopener noreferrer">Instagram DM</a></li>
+                        <li><a href="https://instagram.com/ayrise._" target="_blank" rel="noopener noreferrer">Instagram DM</a></li>
                         
                     </ul>
                 </div>
