--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <h4>CONTACT US</h4>
                     <ul>
                         <li>7696054649</li>
-                        <li>akritigoyal9504@gmail.com</li>
+                        <li>ayrise77@gmail.com</li>
                         <li><a href="https://instagram.com/ayrise._" target="_blank" rel="noopener noreferrer">Instagram DM</a></li>
                         
                     </ul>
